{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 659,
  "lineage": "eb9e90df-273c-7cf8-4369-971b22c80da4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00bf907f47fe1fa0d",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-0e2d36b51f21a96cc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "msk-firehose-demo-dev-kafka-ui-profile",
            "id": "i-0e2d36b51f21a96cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec81cad32dc76cfc"
              }
            ],
            "primary_network_interface_id": "eni-0ec81cad32dc76cfc",
            "private_dns": "ip-10-0-10-133.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.133",
            "public_dns": "ec2-13-235-9-206.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.9.206",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "msk-firehose-demo"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "msk-firehose-demo"
                },
                "throughput": 125,
                "volume_id": "vol-0188e0b5354e2fbf7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb58884589db7336",
            "tags": {
              "Name": "msk-firehose-demo-dev-kafka-ui"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-kafka-ui",
              "Project": "msk-firehose-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0fdba5e3a1d9c28ef"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.kafka_ui",
            "aws_iam_policy.kafka_ui_msk",
            "aws_iam_role.kafka_ui",
            "aws_iam_role_policy_attachment.kafka_ui_msk",
            "aws_iam_role_policy_attachment.kafka_ui_ssm",
            "aws_msk_serverless_cluster.this",
            "aws_security_group.kafka_ui",
            "aws_security_group.msk",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.producer_public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_iam_policy_document.kafka_ui_assume",
            "data.aws_iam_policy_document.kafka_ui_msk",
            "data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00bf907f47fe1fa0d",
            "arn": "arn:aws:ec2:ap-south-1:741448939728:instance/i-0ae59d2b2c8ac5985",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "msk-firehose-demo-dev-producer-profile",
            "id": "i-0ae59d2b2c8ac5985",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0858b4e1066388add"
              }
            ],
            "primary_network_interface_id": "eni-0858b4e1066388add",
            "private_dns": "ip-10-0-10-103.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.103",
            "public_dns": "ec2-43-205-103-84.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.103.84",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "msk-firehose-demo"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "msk-firehose-demo"
                },
                "throughput": 125,
                "volume_id": "vol-01bca275deedda9da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb58884589db7336",
            "tags": {
              "Name": "msk-firehose-demo-dev-producer"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-producer",
              "Project": "msk-firehose-demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-016b10045c0c70418"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.producer",
            "aws_iam_policy.producer_msk",
            "aws_iam_role.producer",
            "aws_iam_role_policy_attachment.producer_msk",
            "aws_iam_role_policy_attachment.producer_ssm",
            "aws_msk_serverless_cluster.this",
            "aws_s3_bucket.firehose",
            "aws_s3_object.producer_source",
            "aws_security_group.msk",
            "aws_security_group.producer",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.producer_public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_iam_policy_document.producer_assume",
            "data.aws_iam_policy_document.producer_msk",
            "data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:internet-gateway/igw-0203c88377cf48b97",
            "id": "igw-0203c88377cf48b97",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags": {
              "Name": "msk-firehose-demo-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-igw",
              "Project": "msk-firehose-demo"
            },
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "producer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:route-table/rtb-0b4e70ad1207a2aac",
            "id": "rtb-0b4e70ad1207a2aac",
            "owner_id": "741448939728",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0203c88377cf48b97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "msk-firehose-demo-dev-producer-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-producer-public-rt",
              "Project": "msk-firehose-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "producer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f473d53108747612",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b4e70ad1207a2aac",
            "subnet_id": "subnet-0eb58884589db7336"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.producer_public",
            "aws_subnet.producer_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-0fdba5e3a1d9c28ef",
            "description": "Security group for the public Kafka UI EC2 instance",
            "egress": [],
            "id": "sg-0fdba5e3a1d9c28ef",
            "ingress": [],
            "name": "msk-firehose-demo-dev-kafka-ui-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "msk-firehose-demo-dev-kafka-ui-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-kafka-ui-sg",
              "Project": "msk-firehose-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-03308beefe6fa4b41",
            "description": "Security Group for MSK Serverless",
            "egress": [],
            "id": "sg-03308beefe6fa4b41",
            "ingress": [],
            "name": "msk-firehose-demo-dev-msk-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "msk-firehose-demo-dev-msk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-msk-sg",
              "Project": "msk-firehose-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group/sg-016b10045c0c70418",
            "description": "Security Group for producer EC2",
            "egress": [],
            "id": "sg-016b10045c0c70418",
            "ingress": [],
            "name": "msk-firehose-demo-dev-producer-sg",
            "name_prefix": "",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "msk-firehose-demo-dev-producer-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-producer-sg",
              "Project": "msk-firehose-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-099fcff7554b252fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099fcff7554b252fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-03a40f5db58339c49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a40f5db58339c49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "producer_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:subnet/subnet-0eb58884589db7336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb58884589db7336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448939728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "msk-firehose-demo-dev-producer-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "msk-firehose-demo-dev-producer-public",
              "Project": "msk-firehose-demo"
            },
            "vpc_id": "vpc-05afd10c845953b48"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:vpc/vpc-05afd10c845953b48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071813869d97f88ec",
            "default_route_table_id": "rtb-0892e96fb3aac2c8d",
            "default_security_group_id": "sg-0b4eda0ff88d9f6fb",
            "dhcp_options_id": "dopt-001d54595cb380f65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05afd10c845953b48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0892e96fb3aac2c8d",
            "owner_id": "741448939728",
            "region": "ap-south-1",
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0cacacf6498844249",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgr-0cacacf6498844249",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03308beefe6fa4b41",
            "security_group_rule_id": "sgr-0cacacf6498844249",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0f83a2d68c840f01e",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "Kafka to allowed CIDR",
            "from_port": 9098,
            "id": "sgr-0f83a2d68c840f01e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03308beefe6fa4b41",
            "security_group_rule_id": "sgr-0f83a2d68c840f01e",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "kafka_ui_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0f2b608b0f6f78962",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic for Kafka UI",
            "from_port": null,
            "id": "sgr-0f2b608b0f6f78962",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fdba5e3a1d9c28ef",
            "security_group_rule_id": "sgr-0f2b608b0f6f78962",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka_ui",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "producer_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0e137738ab25a4195",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0e137738ab25a4195",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-016b10045c0c70418",
            "security_group_rule_id": "sgr-0e137738ab25a4195",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.producer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.0.0/8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0dbeb778ff82a0e97",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "Kafka IAM TLS from allowed CIDR",
            "from_port": 9098,
            "id": "sgr-0dbeb778ff82a0e97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03308beefe6fa4b41",
            "security_group_rule_id": "sgr-0dbeb778ff82a0e97",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kafka_ui_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-06a626cbc97d97c9b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow Kafka UI web access",
            "from_port": 8080,
            "id": "sgr-06a626cbc97d97c9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0fdba5e3a1d9c28ef",
            "security_group_rule_id": "sgr-06a626cbc97d97c9b",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka_ui",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_kafka_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-0c9242438c718d785",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow Kafka UI to MSK IAM listener",
            "from_port": 9098,
            "id": "sgr-0c9242438c718d785",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fdba5e3a1d9c28ef",
            "region": "ap-south-1",
            "security_group_id": "sg-03308beefe6fa4b41",
            "security_group_rule_id": "sgr-0c9242438c718d785",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kafka_ui",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_producer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-099b00520a756844c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow producer EC2 to MSK IAM listener",
            "from_port": 9098,
            "id": "sgr-099b00520a756844c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-016b10045c0c70418",
            "region": "ap-south-1",
            "security_group_id": "sg-03308beefe6fa4b41",
            "security_group_rule_id": "sgr-099b00520a756844c",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.msk",
            "aws_security_group.producer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "producer_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:741448939728:security-group-rule/sgr-03eb598c06ce4cbea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgr-03eb598c06ce4cbea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-016b10045c0c70418",
            "security_group_rule_id": "sgr-03eb598c06ce4cbea",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "msk-firehose-demo"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.producer",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}